# wasm-pack

./: CHANGELOG.md  Cargo.toml  book.toml  index.html
.github/workflows/: release.yml
_installer/: init.sh
book/: 404.html  cargo-toml-configuration.html  contributing.html  introduction.html  print.html  quickstart.html  searcher-c2a407aa.js  searchindex-2caa9865.js  toc-c95d8ef8.js  toc.html
book/commands/: build.html  index.html  init.html  new.html  pack-and-publish.html  test.html
book/prerequisites/: considerations.html  index.html  non-rustup-setups.html  npm.html
book/tutorials/: index.html
book/tutorials/hybrid-applications-with-webpack/: getting-started.html  index.html  using-your-library.html
book/tutorials/npm-browser-packages/: building-your-project.html  getting-started.html  index.html  packaging-and-publishing.html  testing-your-project.html  using-your-library.html
docs/_installer/: build-installer.rs  index.html  init.sh
docs/src/: SUMMARY.md  cargo-toml-configuration.md  emscripten-target.md
docs/src/commands/: build.md  new.md
installer/: index.html  init.sh
npm/: .gitignore  README.md  binary.js  install.js  package.json  run.js
src/: bindgen.rs  contributing.md  generate.rs  introduction.md  license.rs  quickstart.md  wasm_opt.rs
src/command/: build.rs  generate.rs  mod.rs  test.rs
src/command/publish/: mod.rs
src/commands/: build.md  new.md  test.md
src/install/: mod.rs
src/manifest/: mod.rs
src/prerequisites/: considerations.md  index.md
tests/all/: emscripten.rs  main.rs  manifest.rs
tests/all/utils/: fixture.rs
theme/: header.hbs
wasm-pack-emscripten-template/: Cargo.toml  README.md
wasm-pack-emscripten-template/.cargo/: config.toml
wasm-pack-emscripten-template/src/: lib.rs
(+14 files in other folders)
