[package]
name = "wasm-pack"
description = "📦✨ your favorite rust -> wasm workflow tool!"
version = "0.15.0"
authors = ["Ashley Williams <ashley666ashley@gmail.com>", "Jesper Håkansson <jesper@jesperh.se>"]
repository = "https://github.com/wasm-bindgen/wasm-pack.git"
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"
categories = ["wasm"]
documentation = "https://wasm-bindgen.github.io/wasm-pack/"

[dependencies]
anyhow = "1.0.100"
binary-install = "0.4.1"
cargo_metadata = "0.23.1"
chrono = "0.4.42"
console = "0.16.1"
dialoguer = "0.12.0"
env_logger = { version = "0.11.8", default-features = false }
glob = "0.3.3"
human-panic = "2.0.4"
log = "0.4.28"
parking_lot = "0.12.5"
semver = "1.0.27"
serde = "1.0.228"
serde_derive = "1.0.228"
serde_ignored = "0.1.14"
serde_json = "1.0.145"
siphasher = "1.0.1"
strsim = "0.11.1"
clap = { version = "4.2.5", features = ["derive"] }
toml = "0.9.8"
ureq = { version = "2.12.1", features = ["json", "socks-proxy"] }
walkdir = "2.5.0"
which = "8.0.0"
path-clean = "1.0.1"
dirs = "6.0.0"

[dev-dependencies]
assert_cmd = "2.1.1"
lazy_static = "1.5.0"
predicates = "3.1.3"
serial_test = "3.2.0"
tempfile = "3.23.0"

