[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2021"

# Emscripten consumes a static library — it links the Rust object code into
# the final wasm itself. `cdylib` would skip emcc entirely.
[lib]
crate-type = ["staticlib"]

[dependencies]
wasm-bindgen = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size; emcc will further optimize at
# link time via wasm-opt.
opt-level = "s"
